# SRB2-WASM

./: .gitignore  CMakeLists.txt
.github/workflows/: static.yml
assets/: CMakeLists.txt
src/: CMakeLists.txt  comptime.c  d_main.c  deh_tables.c  doomtype.h  info.c  info.h  p_enemy.h  p_inter.c  p_map.c  p_mobj.c  p_spec.c  p_user.c  s_sound.h  screen.c
src/sdl/: CMakeLists.txt  i_system.c
src/web/elm/: Main.elm
src/web/js/: kart.js
